# NMPC_Papers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MHE-DelayedSystem/: README.md  delayed_soode_sim.py  export_so_ode_model_continous_and_discrete.py  utils.py
MHE-SineWave/: README.md  export_sine_wave_mhe_ode_model.py  export_sine_wave_mhe_solver.py  sin_wave_mhe.py  sin_wave_mhe_log.py
Nonlinear Model Predictive Control of a Human-sized Quadrotor/: README.md  export_ocp_solver.py  export_quad_ode_model.py  minimal_example_closed_loop.py  minimal_example_sim.py  minimal_quad_closed_loop.py  minimal_quad_sim.py  utils.py
Real-time MHE-base nonlinear MPC of Pendubot system/: README.md  export_pend_mhe_solver.py  export_pend_ocp_solver.py  export_pend_ode_model.py  pend_closed_loop.py  pend_sim.py  utils.py
SimpleQuatModel/: export_quaternion_ode_model.py  minimal_quaternion_ocp.py  utils.py
